# g4tool

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  bootstrap  bootstrap.sh  configure  configure.ac  configure.in  configure.scan  decode.c  dotest.sh  dotest_t2b.sh  encode.c  global.h  main.c  pcl.c  skiphead.pl  tables.c  tiff.c  tiff2bacon  tiff2bacon.c
attic/: NEWS  configure.in  configure.scan
attic/aux/: mkinstalldirs
aux/: mkinstalldirs
hardcore/: README  code1.bacon  crash1.bacon  farr.bacon  pcl3.bacon  pcl4.bacon  pcl5.bacon  trunc2.bacon
jobs/: 13260.1.2560x3496.g4  22390.1.2320x3408.g4  lpdjob.8202
man/: Makefile.am  Makefile.in  g4tool.1  tiff2bacon.1
obsolete/: Makefile.byhand  README.filtg4  README.g4tool  README.printdocs  cmpout.sh  dotry.sh  dumpbits.pl  filtg4.pl  lprpages.sh  patch1.sh  spooltest.sh  xdump.pl
scans/: 4.2400x3496.g4  5.4192x2542.g4
src/: Makefile.am  Makefile.in  config.h.in  decode.c  encode.c  g4tool.h  global.h  main.c  pbm.c  pcl.c  tables.c  tiff.c  tiff2bacon.c
test/: Makefile.am  Makefile.in  basic.test  dotest.sh  suite.sh  test.pl
test/data/: 001  002  008  dedoc  test.tif
test/g4tool/: basic.sh  basic.sh.ref  extended.sh
testfiles/: 000  003  004  005  006  007  epadoc  gs_multi_g4.tif  pctdoc  rand.600x600.g4  rand.ashouldbe.pbm  test.raw
testfiles/hard/: break1.bacon  crash2.bacon  crash3.bacon  pcl1.bacon  pcl2.bacon  trunc1.bacon
testfiles/scans/: 1.2400x3496.g4  2.2400x3496.g4  3.2400x3496.g4
