SUBDIRS=src man test
PACKAGE=g4tool
AC_INIT(src/global.h)
AC_CONFIG_AUX_DIR(aux)
AM_INIT_AUTOMAKE(g4tool,0.9.0)
AC_PROG_CC
AC_PROG_RANLIB
AC_HEADER_STDC
AC_CHECK_HEADER(tiffio.h,,AC_MSG_ERROR(tiffio.h not found))
AC_CHECK_LIB(tiff,TIFFOpen,[ AC_DEFINE(HAVE_LIBTIFF,1)
	TIFF_LIB="-ltiff" ],AC_MSG_ERROR(You need libtiff))
AC_SUBST(TIFF_LIB)
AM_CONFIG_HEADER(src/config.h)
AC_OUTPUT(Makefile src/Makefile test/Makefile man/Makefile)
